// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form Snapshot 1. renderer 1`] = `
<form>
  <input
    name="email"
    onChange={[Function]}
    type="text"
  />
  <button
    onClick={[Function]}
  >
    Add
  </button>
</form>
`;

exports[`Form Snapshot 2. shallow 1`] = `
<form>
  <input
    name="email"
    onChange={[Function]}
    type="text"
  />
  <button
    onClick={[Function]}
  >
    Add
  </button>
</form>
`;

exports[`Form Snapshot 3. mount 1`] = `
<form>
  <input
    name="email"
    onChange={[Function]}
    type="text"
  />
  <button
    onClick={[Function]}
  >
    Add
  </button>
</form>
`;

exports[`Form Snapshot 4. render 1`] = `
<form>
  <input
    name="email"
    type="text"
  />
  <button>
    Add
  </button>
</form>
`;
